--- a/index.html
+++ b/index.html
@@ -1046,8 +1046,8 @@
                 </div>
               </div>
               <div class="f3">
-                <a href="https://www.instagram.com/warrioralliancenft/?hl=en" target="_blank" class="link-block-3-2 w-inline-block"></a>
-                <a href="https://twitter.com/critwarrior" target="_blank" class="link-block-3-3 w-inline-block"></a>
+                <!-- <a href="https://www.instagram.com/warrioralliancenft/?hl=en" target="_blank" class="link-block-3-2 w-inline-block"></a>
+                <a href="https://twitter.com/critwarrior" target="_blank" class="link-block-3-3 w-inline-block"></a> -->
               </div>
             </div>
             <div class="text-block-18">
