--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <a href="#Warriors" class="nav-link w-nav-link">Warriors</a>
             <a href="#Community" class="nav-link w-nav-link">Community</a>
             <a href="#About" class="nav-link w-nav-link">About</a>
+            <a href="WHITEPAPER CRITICAL WARRIOR.pdf" target="_blank" class="nav-link w-nav-link">Whitepaper</a>
             <!-- <a href="#FAQ" class="nav-link w-nav-link">FAQ</a> -->
           </nav>
           <div class="menu-button w-nav-button">
@@ -358,11 +359,11 @@
                     <div class="div-block-22">
                       <div class="icon3"></div>
                       <div class="text-block-19-c2">
-                        Exclusive Discord access:
+                        Exclusive Telegram access:
                       </div>
                     </div>
                     <div class="text-block-20">
-                      Critical Warrior Discord members will get
+                      Critical Warrior Telegram members will get
                       behind-the-scenes access to  Game Development, token
                       launches and private prize contests.
                     </div>
@@ -499,7 +500,7 @@
               <a href="https://www.instagram.com/laflammesj/" class="img18 w-inline-block"></a>
               <div class="b-signature">
                 <div class="text-block-13">Josh <br>LaFlamme</div>
-                <div class="text-block-14">Discord<br>Manager</div>
+                <div class="text-block-14">Telegram<br>Manager</div>
               </div>
             </div>
             <div class="b11">
@@ -523,7 +524,7 @@
             <div data-w-id="12da1d2d-f5d8-f32a-1869-3dd741b0413a" class="faq-question-wrap-c2">
               <a href="#" class="faq-question-bar-c2 w-inline-block">
                 <div class="bl1">
-                  <h3 class="heading-4-c5">WARRIOR ALLIANCE</h3>
+                  <h3 class="heading-4-c5">CRITICAL WARRIOR</h3>
                   <div class="text-block-21">MINT Roadmap</div>
                   <div class="lines-c4">
                     <div class="div-block-3-c3"></div>
@@ -640,7 +641,7 @@
             <div data-w-id="b684624b-c7e1-3cb5-662f-cd12b842181f" class="faq-question-wrap _22">
               <a href="#" class="faq-question-bar-c2 w-inline-block">
                 <div class="bl1-c2">
-                  <h3 class="heading-4-c5">WARRIOR ALLIANCE</h3>
+                  <h3 class="heading-4-c5">CRITICAL WARRIOR</h3>
                   <div class="text-block-21">Roadmap</div>
                   <div class="lines-c4">
                     <div class="div-block-3-c3"></div>
@@ -751,6 +752,7 @@
                   <a href="#Home" class="link">HOME</a>
                   <a href="#About" class="link">ABOUT</a>
                   <a href="#Roadmap" class="link">ROADMAP</a>
+                  <a href="WHITEPAPER CRITICAL WARRIOR.pdf" target="_blank" class="link">Whitepaper</a>
                   <!-- <a href="#FAQ" class="link">FAQ</a> -->
                 </div>
               </div>
@@ -760,7 +762,7 @@
               </div>
             </div>
             <div class="text-block-18">
-              ©2021 THEWARRIORSALLIANCE All Rights Reserved
+              ©2021 THECRITICALsWARRIOR All Rights Reserved
             </div>
           </div>
         </div>
