--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
   </head>
   <body class="body">
     <div id="luxy" class="main">
-      <div class="div-block">
+      <!-- <div class="div-block"> -->
 	
 	<!--New Top Nav-->
-        <div class="buttons-container">
+  <!-- <div class="buttons-container">
 		<a href="https://warrioralliance.io/builder-page" class="button w-button top-header">The Builder</a>
 		<a href="https://armory.warrioralliance.io/" class="button w-button top-header">The Armory</a>
-	</div>
+	</div> -->
 	<!--End New Top Nav-->
 
-      </div>
+      <!-- </div> -->
 
 	<!--End New Top Nav-->
 
@@ -98,7 +98,6 @@
 		<h2 class="myh2">Dawn Of Retribution</h2>
 		<div class="video-container">
 			<iframe class="gamevideo" src="672557017.html" width="100%" height="300px" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-			<iframe class="gamevideo" src="670795188.html" width="100%" height="300px" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
 
